[package]
name = "charms"
description = "Enchant Bitcoin with your own spells ✨"
repository = "https://github.com/CharmsDev/charms"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[workspace.package]
version = "0.5.2"
edition = "2021"
authors = ["Ivan Mikushin <ivan@charms.dev>"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.1", features = ["http2"] }
bincode = { version = "1.3.3" }
bitcoin = { workspace = true, features = ["rand", "rand-std"] }
bitcoincore-rpc = { version = "0.19.0" }
charms-client = { path = "./charms-client", version = "0.5.2" }
charms-data = { path = "./charms-data", version = "0.5.2" }
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = { version = "4.5.47" }
hex = { workspace = true }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-cuda = { workspace = true }
sp1-primitives = { workspace = true }
sp1-prover = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { version = "1.44", features = ["full"] }
tracing = { workspace = true }
tracing-forest = { version = "0.1.6" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twirp = { package = "twirp-rs", version = "0.13.0-succinct" }

[features]
prover = ["sp1-sdk/native-gnark", "sp1-prover/native-gnark"]

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }

[workspace]
members = [
    ".",
    "charms-client",
    "charms-data",
    "charms-sdk",
    "charms-spell-checker",
]

resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.97" }
bitcoin = { version = "0.32.5" }
ciborium = { version = "0.2.2" }
ciborium-io = { version = "0.2.2" }
hex = { version = "0.4.3" }
proptest = { version = "1.6.0" }
proptest-derive = { version = "0.5.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0.140" }
serde_yaml = { version = "0.9.34" }
sp1-core-executor = { version = "4.1.4" }
sp1-core-machine = { version = "4.1.4" }
sp1-cuda = { version = "4.1.4" }
sp1-primitives = { version = "4.1.4" }
sp1-prover = { version = "4.1.4" }
sp1-sdk = { version = "4.1.4" }
sp1-verifier = { version = "4.1.4" }
sp1-zkvm = { version = "4.1.4" }
test-strategy = { version = "0.4.1" }
tracing = { version = "0.1" }

[profile.test]
lto = "off"
opt-level = 3

[profile.release]
lto = "fat"
opt-level = 3
strip = "debuginfo"

[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-4.0.0" }
