[package]
name = "charms"
description = "Programmable assets on Bitcoin and beyond"
repository = "https://github.com/CharmsDev/charms"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["Ivan Mikushin <ivan@charms.dev>"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.4", features = ["http2"] }
axum-macros = { version = "0.5.0" }
bincode = { version = "1.3.3" }
bitcoin = { workspace = true, features = ["rand", "rand-std"] }
bitcoincore-rpc = { version = "0.19.0" }
charms-app-runner = { path = "./charms-app-runner", version = "0.7.0" }
charms-client = { path = "./charms-client", version = "0.7.0" }
charms-data = { path = "./charms-data", version = "0.7.0" }
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = { version = "4.5.54" }
cml-chain = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { version = "3.13.0", features = ["base64"] }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-cuda = { workspace = true }
sp1-primitives = { workspace = true }
sp1-prover = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { version = "1.45", features = ["full"] }
toml = { version = "0.8.23" }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { workspace = true }
tracing-forest = { version = "0.1.6" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twirp = { package = "twirp-rs", version = "0.13.0-succinct" }

[features]
prover = ["sp1-sdk/native-gnark", "sp1-prover/native-gnark"]
none = []

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }

[workspace]
members = [
    ".", "charms-app-checker",
    "charms-app-runner",
    "charms-client",
    "charms-data",
    "charms-sdk",
    "charms-spell-checker",
]

resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98" }
bitcoin = { version = "0.32.6" }
ciborium = { version = "0.2.2" }
ciborium-io = { version = "0.2.2" }
cml-chain = { version = "6.2.0" }
hex = { version = "0.4.3" }
proptest = { version = "1.7.0" }
proptest-derive = { version = "0.5.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0.140" }
serde_yaml = { version = "0.9.34" }
sha2 = { version = "0.10.8" }
sp1-core-executor = { version = "5.0.5" }
sp1-core-machine = { version = "5.0.5" }
sp1-cuda = { version = "5.0.5" }
sp1-primitives = { version = "5.0.5" }
sp1-prover = { version = "5.0.5" }
sp1-sdk = { version = "5.0.6" }
sp1-verifier = { version = "5.0.5" }
sp1-zkvm = { version = "5.0.5" }
test-strategy = { version = "0.4.3" }
tracing = { version = "0.1" }

[profile.test]
lto = "off"
opt-level = 3

[profile.release]
lto = "fat"
opt-level = 3
strip = "debuginfo"

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
wasmi = { git = "https://github.com/imikushin/wasmi", branch = "rust-1.85" }