[package]
name = "charms-app-checker"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
charms-app-runner = { path = "../charms-app-runner", version = "0.7.0" }
charms-data = { path = "../charms-data", version = "0.7.0" }
charms-client = { path = "../charms-client", version = "0.7.0" }
serde = { workspace = true, features = ["derive"] }
sp1-primitives = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
