[package]
name = "charms-client-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]  # Use "cdylib" for Wasm modules

[dependencies]
charms-client = { path = "../charms-client", version = "0.4.0" }
charms-data = { path = "../charms-data", version = "0.4.0" }
wasm-bindgen = { version = "0.2" }  # for easier JavaScript interop