[package]
name = "charms-client"
description = "Charms client library"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
cardano-serialization-lib = { workspace = true }
charms-data = { path = "../charms-data", version = "0.6.0" }
enum_dispatch = { version = "0.3.13" }
serde = { workspace = true, features = ["derive"] }
sp1-primitives = { workspace = true }
sp1-verifier = { workspace = true }
tracing = { workspace = true }
