[package]
name = "charms-client"
description = "Charms client library"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
charms-data = { path = "../charms-data", version = "0.7.0" }
cml-chain = { workspace = true }
enum_dispatch = { version = "0.3.13" }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { version = "3.13.0" }
sha2 = { workspace = true }
sp1-primitives = { workspace = true }
sp1-verifier = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ciborium = { version = "0.2.2" }
serde_json = { version = "1.0.140" }
