[package]
name = "charms-spell-checker"
description = "Recursive validation of spells creating Charms"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "spell_checker"
path = "bin/spell_checker.rs"

[[bin]]
name = "btc-finality"
path = "bin/btc_finality.rs"

[dependencies]
charms = { path = ".." }
charms-data = { path = "../charms-data", version = "0.7.0" }
charms-client = { path = "../charms-client", version = "0.7.0" }
serde = { workspace = true, features = ["derive"] }
serde_cbor = "0.11.2"
sp1-primitives = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
bitcoin = { workspace = true }
sha2 = { version = "0.10.8" }