[package]
name = "panoramix-charm"
description = "A simple Charms app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
charms-sdk = { path = "../../charms-sdk", version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.8" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Empty `[workspace]` section to make this a "top-level" project
[workspace]
